added new Gradle task